# unibots-Third-Timers

./: README.md  collision_calibrate.py  pi_fsm_final.py
app/: AGENTS.md  README.md  pubspec.yaml
app/android/: gradle.properties  settings.gradle.kts
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: CMakeLists.txt  apriltag_native.cpp
app/android/app/src/main/kotlin/com/example/unibots_navigation/: MainActivity.kt
app/assets/: model_quantized.tflite
app/lib/: Detection.dart  apriltag_ffi.dart  localization_helper.dart  main.dart  serial_helper.dart
cad_old/: New Ramp.3mf  New Tyre.gcode.3mf  Single_Tyre.gcode.3mf  Spokes for Rubber Bands.3mf  Tyre.3mf  Tyre.gcode.3mf  file_modified_dates.csv  file_modified_dates.txt  middle.3mf  ramp-NEW_NEW.3mf  spin_new.3mf
cad_old/early_june_prints/: New Base.3mf  New Spin.3mf
cad_old/late_may_prints/: Sidewall.3mf  Slope.3mf  spin.3mf
esp/: IMU_test.ino  encoder.ino
pi/: pi_fsm_final.py
simulation/autonomous_control/: autonomous_control.py
simulation/localization_test/: localization_test.py
simulation/localization_test/localization/: april_tags.py
simulation/localization_test/webots_env/: ball_spawner.py
